deploy/nva/1-nic/iptables/iptables.rules
# Generated by iptables-save v1.8.7 on Thu Aug 12 00:48:20 2021
*filter
:INPUT ACCEPT [26093:11318598]
:FORWARD ACCEPT [3795:7962603]
:OUTPUT ACCEPT [28950:9367807]
COMMIT
# Completed on Thu Aug 12 00:48:20 2021
# Generated by iptables-save v1.8.7 on Thu Aug 12 00:48:20 2021
*mangle
:PREROUTING ACCEPT [6678:10373822]
:INPUT ACCEPT [5301:2588033]
:FORWARD ACCEPT [1377:7785789]
:OUTPUT ACCEPT [6125:2025111]
:POSTROUTING ACCEPT [7502:9810900]
-A PREROUTING -d 20.36.44.155/32 -i eth0 -j MARK --set-xmark 0x1/0xff          # in eth0 and from a LB rule add extra mark for dnat/snat.
-A PREROUTING -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff  # save all marks.
-A FORWARD -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff  # restore all marks from local.
-A OUTPUT -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff   # restore all marks through local.
COMMIT
# Completed on Thu Aug 12 00:48:20 2021
# Generated by iptables-save v1.8.7 on Thu Aug 12 00:48:20 2021
*nat
:PREROUTING ACCEPT [327:17028]
:INPUT ACCEPT [324:16848]
:OUTPUT ACCEPT [790:49662]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth0 -p tcp -m mark --mark 0x1/0xff -m tcp --dport 80 -j DNAT --to-destination 10.0.4.12:8080
-A POSTROUTING -o eth0 -m mark --mark 0x1/0xff -j MASQUERADE
-A POSTROUTING -o eth0 -s 10.0.0.0/8 -d 10.0.0.0/8 -j ACCEPT
-A POSTROUTING -o eth0 -s 10.0.0.0/8 -d 172.16.0.0/12 -j ACCEPT
-A POSTROUTING -o eth0 -s 10.0.0.0/8 -d 192.168.0.0/16 -j ACCEPT
-A POSTROUTING -o eth0 -s 172.16.0.0/12 -d 10.0.0.0/8 -j ACCEPT
-A POSTROUTING -o eth0 -s 172.16.0.0/12 -d 172.16.0.0/12 -j ACCEPT
-A POSTROUTING -o eth0 -s 172.16.0.0/12 -d 192.168.0.0/16 -j ACCEPT
-A POSTROUTING -o eth0 -s 192.168.0.0/16 -d 10.0.0.0/8 -j ACCEPT
-A POSTROUTING -o eth0 -s 192.168.0.0/16 -d 172.16.0.0/12 -j ACCEPT
-A POSTROUTING -o eth0 -s 192.168.0.0/16 -d 192.168.0.0/16 -j ACCEPT
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Thu Aug 12 00:48:20 2021
# Generated by iptables-save v1.8.7 on Thu Aug 12 00:48:20 2021
*security
:INPUT ACCEPT [6718:3316200]
:FORWARD ACCEPT [1999:7837749]
:OUTPUT ACCEPT [2587:426353]
-A OUTPUT -d 168.63.129.16/32 -p tcp -m owner --uid-owner 0 -j ACCEPT
-A OUTPUT -d 168.63.129.16/32 -p tcp -m conntrack --ctstate INVALID,NEW -j DROP
COMMIT
# Completed on Thu Aug 12 00:48:20 2021
